# FtpWifi

./: .gitignore  CMakeLists.txt
include/file/: abstractparsingfileinfo.h  file.h  fileabstract.h  filemanager.h  filemanagerabstract.h  filemetadatacreate.h  filemetadataparse.h  filereader.h  ifilereader.h  jsonfile.h  parsingfileinfo.h
include/load/: abstractload.h  dataloadmanager.h  iload.h  load.h
include/net/: abstractconnect.h  connect.h  connectfactory.h  datareceiver.h  datasender.h  idatareceiver.h  idatasender.h  iserver.h  server.h  tcpserver.h
src/file/: file.cpp  filemanager.cpp  filemetadatacreate.cpp  filemetadataparse.cpp  filereader.cpp  parsingfileinfo.cpp
src/load/: dataloadmanager.cpp  load.cpp
src/main/: main.cpp  mainwindow.cpp
src/net/: connect.cpp  connectfactory.cpp  datareceiver.cpp  datasender.cpp  server.cpp  tcpserver.cpp
test/: CMakeLists.txt  file_test.h  load_test.h  main.cpp  net_test.h  test_main.cpp
